# GridNoiseMaker

./: .gitignore  AGENTS.md  README.md  TESTING_SUMMARY.md  build_windows.bat  build_windows.ps1
.github/workflows/: imgui-shell-build.yml
apps/imgui-shell/: CMakeLists.txt  CMakePresets.json  README.md
apps/imgui-shell/app/: App.cpp  App.h  CMakeLists.txt  DialogManager.cpp  DialogManager.h  FileDialog.cpp  FileDialog.h  NodeGraphWidget.cpp  NodeGraphWidget.h  NodeTypePanel.cpp  NodeTypePanel.h  NodeTypeRegistry.cpp  NodeTypeRegistry.h  Platform.h  Preferences.cpp  Preferences.h  RenderContext.h  SimpleGridRenderer.cpp  SimpleGridRenderer.h  Theme.cpp  Theme.h  ThemeStorage.cpp  ThemeStorage.h  ViewTransform.cpp  ViewTransform.h
apps/imgui-shell/assets/: default_node_graph.json
apps/imgui-shell/assets/themes/: dark.json  example-theme.json  light.json
apps/imgui-shell/cmake/: Dependencies.cmake
apps/imgui-shell/docs/: architecture.md
apps/imgui-shell/platform/desktop/: CMakeLists.txt  main.cpp  resources.rc  vk_check.h  vk_device.cpp  vk_device.h  vk_frame.cpp  vk_frame.h  vk_instance.cpp  vk_instance.h  vk_swapchain.cpp  vk_swapchain.h
apps/imgui-shell/platform/desktop/file_dialog/: LinuxFileDialog.cpp  LinuxFileDialog.h  MacOSFileDialog.h  MacOSFileDialog.mm  WindowsFileDialog.cpp  WindowsFileDialog.h
apps/imgui-shell/platform/ios/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Info.plist.in  ViewController.h  ViewController.mm  main.mm
apps/imgui-shell/platform/ios/file_dialog/: iOSFileDialog.cpp  iOSFileDialog.h
assets/: default_node_graph.json  test_unknown_types.json
docs/: system-design.md
docs/plans/: 2026-06-16-custom-widgets-design.md
docs/superpowers/plans/: 2026-06-18-build-run-imgui-shell-windows-plan.md  2026-06-23-node-graph-non-movable-implementation.md
docs/superpowers/specs/: 2026-06-18-build-run-imgui-shell-windows-design.md  2026-06-23-node-graph-non-movable-design.md
openspec/changes/add-theme-picker/: design.md
openspec/changes/archive/2026-06-16-add-font-antialiasing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-add-gui-theme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-defer-relayout-during-window-resize/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-enable-multi-viewport/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-fix-desktop-shutdown-crash/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-16-imgui-cross-platform-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-preferences-dialog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-theme-persistence/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-enable-live-font-rebuild/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-hide-console-window/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-make-demo-modal/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-add-theme-picker/: proposal.md  tasks.md
openspec/changes/archive/2026-06-18-add-typography-persistence/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-preferences-as-system-dialog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-node-graph-context-menu/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-enhance-node-graph-widget/: proposal.md
openspec/changes/archive/2026-06-19-fix-font-rendering-issue/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-add-node-persistence/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-add-native-file-dialogs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-fix-cmake-binary-copy/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-refactor-node-validation-code/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-register-node-type-validation-2/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-z-order-hierarchical-preservation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-z-order-management-nodegraphwidget/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-23-add-node-type-panel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-23-right-click-node-select/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-24-enable-trackpad-pan-macos/: design.md  proposal.md  tasks.md
openspec/changes/imgui-cross-platform-app/: design.md  proposal.md  tasks.md
openspec/changes/setup-application-icons-packaging/: design.md  proposal.md  tasks.md
openspec/specs/app-shell/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/build-system-reliability/: spec.md
openspec/specs/desktop-launch-behavior/: spec.md
openspec/specs/dialog-management/: spec.md
openspec/specs/font-diagnostics/: spec.md
openspec/specs/font-rendering/: spec.md
openspec/specs/font-validation/: spec.md
openspec/specs/gui-theme/: spec.md
openspec/specs/hello-world-site/: spec.md
openspec/specs/native-file-dialogs/: spec.md
openspec/specs/node-graph-persistence/: spec.md
openspec/specs/node-graph-widget/: spec.md
openspec/specs/node-right-click-context/: spec.md
openspec/specs/node-type-drag-source/: spec.md
openspec/specs/node-type-panel/: spec.md
openspec/specs/node-type-validation/: spec.md
openspec/specs/nodegraph-interaction/: spec.md
openspec/specs/nodegraph-visual-feedback/: spec.md
openspec/specs/nodegraph-zorder/: spec.md
openspec/specs/panel-docking/: spec.md
openspec/specs/panel-view-switcher/: spec.md
openspec/specs/preferences-dialog/: spec.md
openspec/specs/render-backend/: spec.md
openspec/specs/smart-window-subsystem/: spec.md
openspec/specs/theme-persistence/: spec.md
openspec/specs/theme-presets/: spec.md
openspec/specs/type-registry-modularity/: spec.md
openspec/specs/ui-sample/: spec.md
(+76 files in other folders)
